--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,34 @@
 body {
     background-color: #F2F1F0;
 }
+
 header {
     background-color: #171717;
     height: 80px;
+    width: 100%;
     padding: 50px 0px 50px 50px;
+    position: fixed;
+    z-index: 5;
 }
+
 h1 {
     color:seashell;
 }
+
 h2 {
     margin: 50px auto 50px auto;
 }
+
 p {
     color: black;
 }
+
+.sticky-box {
+    display: block;
+    position: sticky;
+    top: 30px;
+}
+
 .first-paragraph {
     background-color: rgb(128, 120, 120);
     height: 200px;
@@ -22,7 +36,38 @@ p {
     padding: 50px;
     margin: 50px auto 50px auto;
 }
+
 #second-paragraph {
     background-color: rgb(128, 120, 120);
     height: 200px;
+}
+
+.main-picture {
+    width: 400px;
+    /*margin: 0 auto 0 auto;*/
+    margin-top: 0;
+    margin-right: auto;
+    margin-bottom: 0;
+    margin-left: auto;
+}
+
+.picture-cat {
+    width: 100%;
+}
+
+.my-box {
+    width: 500px;
+    height: 200px;
+    background-color: #171717;
+    position: relative;
+}
+
+.inside-box {
+    background-color: aquamarine;
+    color:rgb(128, 120, 120);
+    width: 50%;
+    position: absolute;
+    bottom: 50px;
+    left: 50px;
+    font-size: 32px;
 }
